--- a/src/App.css
+++ b/src/App.css
@@ -313,7 +313,9 @@ form{
 
   border: 2px solid #ccc;
   /* border-radius: .6rem; */
-  border-top-left-radius: 3rem;
+  /* border-top-left-radius: 3rem; */
+  border-bottom-right-radius: 30px;
+  border-top-left-radius: 30px;
   margin-bottom: .6rem;
   color: white;
 
@@ -342,7 +344,8 @@ form{
   width: 100%;
   height: 100%;
   padding: 1.5rem;
-
+  border-bottom-right-radius: 30px;
+  border-top-left-radius: 30px;
   border-radius: .9rem;
   resize: none;
   margin-top: 0.5rem;
