--- a/src/App.css
+++ b/src/App.css
@@ -346,7 +346,7 @@ form{
   padding: 1.5rem;
   border-bottom-right-radius: 30px;
   border-top-left-radius: 30px;
-  border-radius: .9rem;
+  /* border-radius: .9rem; */
   resize: none;
   margin-top: 0.5rem;
   
