some changes made

--- a/src/App.css
+++ b/src/App.css
@@ -375,10 +375,12 @@ footer{
   margin-top: 2rem;
   color: white;
   font-size: .5rem;
+  align-items: center;
 
 }
 .company-logo img{
   width: 10rem;
+  /* padding-top: 2rem; */
 }
 .links-container{
   margin-left: 2rem;
