--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,9 @@ a:hover{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  
+  -webkit-background-size: cover; 
+  -moz-background-size: cover;    
+  -o-background-size: cover;  
   height: 30rem;
   position: relative;
   display: flex;
