--- a/src/Services.css
+++ b/src/Services.css
@@ -193,6 +193,7 @@
   }
   .services-section h1{
     margin-bottom: -4rem;
+    margin-top: 2rem;
     /* font-size: 1.4rem; */
   }
   .services-container{
@@ -220,7 +221,9 @@
     /* width: 150rem;
     border: 1px  solid red; */
     /* justify-content: space-between; */
-    margin-top: 0;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    border: none;
   }
   .e-card{
     width: 20rem;
