--- a/src/App.css
+++ b/src/App.css
@@ -471,15 +471,13 @@ footer{
     margin-right: -10rem;
   }
 }
-@media (max-width :780px) {
-
-  html{
-    font-size: 55%;
+@media (max-width :995px){
+  .e-card:nth-child(3){
+    margin-left: 20rem;
+    margin-right: -10rem;
   }
-  /* body{
-    padding: 0.3rem;
-  } */
 }
+
 @media (max-width :535px) {
 
   html{
@@ -557,7 +555,7 @@ footer{
     padding-left: 7rem;
   }
   .textarea-field textarea{
-    width: 59rem;
+    width: 60rem;
   }
   
 }
