--- a/src/App.css
+++ b/src/App.css
@@ -510,9 +510,9 @@ footer{
   html{
     font-size: 45%;
   }
-  .about-container{
+  /* .about-container{
     width: 55rem;
-  }
+  } */
   
 }
 @media (max-width :440px) {
