--- a/src/App.css
+++ b/src/App.css
@@ -349,6 +349,15 @@ a:hover{
 .contact-section .title{
   margin-bottom: 1rem;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 form{
   display: flex;
   flex-direction: column;
