--- a/src/Services.css
+++ b/src/Services.css
@@ -88,7 +88,9 @@
   margin-left: auto;
   margin-right: auto;
 }
-
+.icon{
+  font-size: 1.5rem;
+}
 @media (max-width: 767px) {
   .e-card {
     width: calc(50% - 40px); 
